--- a/src/main/resources/templates/userInfo.html
+++ b/src/main/resources/templates/userInfo.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<%@ tagliburi="http://shiro.apache.org/tags" prefix="shiro" %>
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
